Init Grails 3 plugin structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,11 @@
-*.iws
+Thumbs.db
+.DS_Store
+.gradle
+build/
 .idea
 *.iml
-*Db.properties
-*Db.script
+*.ipr
+*.iws
+.project
 .settings
-stacktrace.log
-/plugin.xml
-/*.log
-/*DB.*
-/cobertura.ser
-.DS_Store
-/target
-/web-app
-/target-eclipse
-/eclipse
-/plugins
-/web-app/WEB-INF
-grails-app/i18n
-*~
-plugin.xml
-*.zip
-*.zip.sha1
+.classpath
