--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     repositories {
         mavenLocal()
-        maven { url "https://repo.grails.org/grails/core" }
+        maven { url 'https://repo.grails.org/grails/core' }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
@@ -12,12 +12,12 @@ buildscript {
 }
 
 plugins {
-    id "io.spring.dependency-management" version "0.5.2.RELEASE"
-    id "com.jfrog.bintray" version "1.2"
+    id 'io.spring.dependency-management' version '0.5.2.RELEASE'
+    id 'com.jfrog.bintray' version '1.2'
 }
 
-version "0.1-SNAPSHOT"
-group "org.grails.plugins"
+version '0.1-SNAPSHOT'
+group 'org.grails.plugins'
 
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
@@ -26,8 +26,8 @@ apply plugin: "spring-boot"
 apply plugin: "org.grails.grails-plugin"
 apply plugin: "org.grails.grails-gsp"
 // Used for publishing to central repository, remove if not needed
-apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
-apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
+apply from: 'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
+apply from: 'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
 
 ext {
     grailsVersion = project.grailsVersion
@@ -40,7 +40,7 @@ targetCompatibility = 1.7
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url "https://repo.grails.org/grails/core" }
+    maven { url 'https://repo.grails.org/grails/core' }
 }
 
 dependencyManagement {
@@ -52,19 +52,36 @@ dependencyManagement {
 
 dependencies {
     provided 'org.springframework.boot:spring-boot-starter-logging'
-    provided "org.springframework.boot:spring-boot-starter-actuator"
-    provided "org.springframework.boot:spring-boot-autoconfigure"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
+    provided 'org.springframework.boot:spring-boot-starter-actuator'
+    provided 'org.springframework.boot:spring-boot-autoconfigure'
+    provided 'org.springframework.boot:spring-boot-starter-tomcat'
 
-    provided "org.grails:grails-web-boot"
-    provided "org.grails:grails-dependencies"
+    provided 'org.grails:grails-web-boot'
+    provided 'org.grails:grails-dependencies'
     provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    testCompile "org.grails:grails-plugin-testing"
+    compile 'org.grails.plugins:mongodb'
 
-    console "org.grails:grails-console"
+    compile 'org.mongodb:mongo-java-driver:2.13.3'
+    compile 'org.apache.tika:tika-core:1.10'
+
+    testCompile 'org.grails:grails-plugin-testing'
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = gradleWrapperVersion
+}
+
+bintray {
+    pkg {
+        repo = 'grails-plugins'
+        userOrg = 'donbeave'
+        name = 'org.grails.plugins:gridfs'
+        desc = 'Grails GridFS Plugin'
+        websiteUrl = 'https://github.com/donbeave/grails-gridfs'
+        issueTrackerUrl = 'https://github.com/donbeave/grails-gridfs/issues'
+        vcsUrl = 'https://github.com/donbeave/grails-gridfs'
+        licenses = ['Apache-2.0']
+        publicDownloadNumbers = true
+    }
 }
