--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 
     compile 'org.mongodb:mongo-java-driver:2.13.3'
     compile 'org.apache.tika:tika-core:1.10'
+    compile 'commons-fileupload:commons-fileupload:1.3.1'
+    compile 'commons-io:commons-io:2.4'
 
     testCompile 'org.grails:grails-plugin-testing'
 }
