Migrated to Grails 3.

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web-plugin
     codegen:
-        defaultPackage: gridfs
+        defaultPackage: grails.plugins.gridfs
 info:
     app:
         name: '@info.app.name@'
