--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,8 @@ dependencies {
     provided 'org.grails:grails-dependencies'
     provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    compile 'org.grails.plugins:mongodb'
+    compile 'org.grails.plugins:mongodb:5.0.0.RC2'
 
-    compile 'org.mongodb:mongo-java-driver:2.13.3'
     compile 'org.apache.tika:tika-core:1.10'
     compile 'commons-fileupload:commons-fileupload:1.3.1'
     compile 'commons-io:commons-io:2.4'
